# OG-TestDesk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: ai.rs  app_db.rs  calc.rs  jwt.rs  lib.rs  requests.rs  theme.rs
core/src/sql/: crypto.rs  engine.rs  helpers.rs  mod.rs  models.rs
desktop/: Cargo.toml
desktop/icons/: icon.icns
desktop/src/: ai_tab.rs  appdata.rs  appearance_tab.rs  calculator_tab.rs  codegen.rs  curl_import.rs  floating_tool.rs  graphql_highlighter.rs  inspector_tab.rs  json_highlighter.rs  jwt_tab.rs  main.rs  request_auth.rs  request_env.rs  request_history.rs  request_kv_editor.rs  request_url.rs  requests_tab.rs  scratchpad_tab.rs  sql_erd.rs  sql_grid.rs  sql_highlighter.rs  sql_tab.rs
docs/: DESIGN_APP_SHELL_REBUILD.md  DESIGN_RICH_REBUILD.md
