[package]
name = "og_testdesk_core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aes-gcm = "0.10"
rand = "0.8"
sqlx = { version = "0.7", features = [
    "postgres",
    "sqlite",
    "runtime-tokio-rustls",
    "runtime-tokio-native-tls",
] }
futures-util = "0.3"
csv = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
