[package]
name = "og_testdesk_desktop"
version.workspace = true
edition.workspace = true

[dependencies]
og_testdesk_core = { path = "../core" }
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"

[package.metadata.packager]
product-name = "OG TestDesk"
identifier = "com.omegagiven.ogtestdesk"
description = "OG TestDesk: native developer desk (SQL, API requests, JSON inspector, and dev tools)."
authors = ["OmegaGiven"]
out-dir = "../dist"
icons = [
    "icons/32x32.png",
    "icons/44x44.png",
    "icons/64x64.png",
    "icons/128x128.png",
    "icons/256x256.png",
    "icons/512x512.png",
    "icons/1024x1024.png",
    "icons/icon.ico",
]
